--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,21 @@
 <section>
   <div class="container">
     <div class="entry-list">
-      <article>
-        <h2><a href="detail.html">The best day I’ve ever had</a></h2>
-        <time datetime="2016-01-31">January 31, 2016</time>
-      </article>
-      <article>
-        <h2><a href="detail_2.html">The absolute worst day I’ve ever had</a></h2>
-        <time datetime="2016-01-31">January 31, 2016</time>
-      </article>
-      <article>
-        <h2><a href="detail_3.html">That time at the mall</a></h2>
-        <time datetime="2016-01-31">January 31, 2016</time>
-      </article>
-      <article>
-        <h2><a href="detail_4.html">Dude, where’s my car?</a></h2>
-        <time datetime="2016-01-31">January 31, 2016</time>
-      </article>
+      {% if posts.count() > 0 %}
+      {% for post in posts %}
+        <article>
+          <h2><a href="/entries/{{ post.url }}">{{ post.title }}</a></h2>
+          <time datetime="2016-01-31">{{ post.date.strftime('%B %d, %Y') }}</time>
+        </article>
+      {% endfor %}
+      {% else %}
+        <div class="add-some-entries">
+          <div class="inner-flex">
+            <p>You don't have any entries yet!</p>
+            <a href="/new-entry" class="button">Add Entry</a>
+          </div>
+        </div>
+      {% endif %}
     </div>
   </div>
 </section>
