--- a/static/css/main.css
+++ b/static/css/main.css
@@ -38,6 +38,13 @@
 	border-radius: 8px;
 }
 
+.message {
+	background-color: #4184f2;
+	color: #fff;
+	padding: 15px 0;
+	border-radius: 8px;
+}
+
 .close-notification {
 	position: absolute;
 	right: 15px;
@@ -94,4 +101,32 @@
 .inner-flex {
 	flex: 1;
 	text-align: center;
+}
+
+.text-center {
+	text-align: center;
+}
+
+#delete-container p {
+	margin: 0;
+}
+
+#post-title {
+	display: block;
+	margin: 30px 0!important;
+	font-size: 24px;
+}
+
+#tags-title {
+	margin-bottom: 20px;
+}
+
+.tag {
+	display: inline-block;;
+	color: #fff;
+	border-radius: 8px;
+	padding: 5px 10px;
+	font-size: 14px;
+	background-color: #4184f2;
+	text-decoration: none;
 }
