--- a/templates/detail.html
+++ b/templates/detail.html
@@ -19,12 +19,23 @@
           <h3>Resources to Remember:</h3>
           <p>{{ post.resourcesToRemember }}</p>
         </div>
+        {% if tags.count() > 0 %}
+          <div class="entry">
+            <h3 id="tags-title">Tags:</h3>
+            <div class="tags">
+              {% for tag in tags %}
+                <span class="tag">{{ tag.tag }}</span>
+              {% endfor %}
+            </div>
+          </div>
+        {% endif %}
       </article>
     </div>
   </div>
   <div class="edit">
-    <a href="edit.html" class="button">Edit Entry</a>
-    <a href="edit.html" class="button button-error">Delete</a>
+    <a href="/" class="button">Back</a>
+    <a href="/entries/edit/{{ post.id }}" class="button">Edit Entry</a>
+    <a href="/entries/delete/{{ post.id }}" class="button button-error">Delete</a>
   </div>
 </section>
 {% endblock %}
