--- a/templates/new.html
+++ b/templates/new.html
@@ -15,7 +15,7 @@
         {% for field in form %}
             {{ render_field(field) }}
         {% endfor %}
-        <input type="submit" value="Publish Entry" class="button">
+        <input type="submit" value="Save" class="button">
         <a href="/" class="button button-secondary">Cancel</a>
       </form>
     </div>
